--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.8.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "fmin": "^0.0.4",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.482.0",
     "next": "15.2.2",
