--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
+    "@turf/nearest-point": "^7.2.0",
     "autoprefixer": "^10.4.21",
     "axios": "^1.8.3",
     "class-variance-authority": "^0.7.1",
@@ -23,7 +24,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
-    "tailwind-merge": "^3.0.2"
+    "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -36,6 +37,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.2",
     "tailwindcss": "^4.0.14",
+    "tw-animate-css": "^1.2.9",
     "typescript": "^5"
   }
 }
