--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "fmin": "^0.0.4",
+    "geokdbush": "^2.0.1",
+    "kdbush": "^4.0.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.482.0",
     "next": "^15.3.2",
