--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,12 @@
         },
         "typeRoots": ["./types", "./node_modules/@types"]
     },
-    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+    "include": [
+        "next-env.d.ts",
+        "**/*.ts",
+        "**/*.tsx",
+        ".next/types/**/*.ts",
+        "app/api/fit-fetch/route.js"
+    ],
     "exclude": ["node_modules"]
 }
