--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "lucide-react": "^0.482.0",
     "next": "^15.3.2",
     "postcss": "^8.5.3",
+    "rbush": "^4.0.1",
+    "rbush-knn": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
