--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@radix-ui/react-progress": "^1.1.4",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
+    "@turf/distance": "^7.2.0",
+    "@turf/length": "^7.2.0",
     "@turf/nearest-point": "^7.2.0",
     "autoprefixer": "^10.4.21",
     "axios": "^1.8.3",
