--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-progress": "^1.1.4",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
+    "@stripe/stripe-js": "^7.8.0",
     "@turf/distance": "^7.2.0",
     "@turf/length": "^7.2.0",
     "@turf/nearest-point": "^7.2.0",
@@ -31,6 +32,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
+    "stripe": "^18.4.0",
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
