--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -25,12 +25,13 @@
     "kdbush": "^4.0.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.482.0",
-    "next": "^15.3.2",
+    "next": "^16.0.10",
+    "openai": "^6.1.0",
     "postcss": "^8.5.3",
     "rbush": "^4.0.1",
     "rbush-knn": "^4.0.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-leaflet": "^5.0.0",
     "stripe": "^18.4.0",
     "tailwind-merge": "^3.2.0"
@@ -41,14 +42,18 @@
     "@types/geojson": "^7946.0.16",
     "@types/leaflet": "^1.9.16",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
     "eslint": "^9",
-    "eslint-config-next": "15.2.2",
+    "eslint-config-next": "^16.0.10",
     "eslint-config-prettier": "^10.1.3",
     "prettier": "3.5.3",
     "tailwindcss": "^4.0.14",
     "tw-animate-css": "^1.2.9",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3"
   }
 }
