--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "clsx": "^2.1.1",
     "fmin": "^0.0.4",
     "geokdbush": "^2.0.1",
+    "graphology": "^0.26.0",
+    "graphology-components": "^1.5.4",
+    "graphology-shortest-path": "^2.1.0",
     "kdbush": "^4.0.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.482.0",
@@ -33,6 +36,8 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-leaflet": "^5.0.0",
+    "stream-chain": "^3.4.0",
+    "stream-json": "^1.9.1",
     "stripe": "^18.4.0",
     "tailwind-merge": "^3.2.0"
   },
@@ -47,6 +52,7 @@
     "eslint": "^9",
     "eslint-config-next": "^16.0.10",
     "eslint-config-prettier": "^10.1.3",
+    "graphology-types": "^0.24.8",
     "prettier": "3.5.3",
     "tailwindcss": "^4.0.14",
     "tw-animate-css": "^1.2.9",
