--- a/package.json
+++ b/package.json
@@ -47,8 +47,11 @@
     "@types/geojson": "^7946.0.16",
     "@types/leaflet": "^1.9.16",
     "@types/node": "^20",
+    "@types/rbush": "^4.0.0",
     "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
+    "@types/stream-chain": "^2.1.0",
+    "@types/stream-json": "^1.7.8",
     "eslint": "^9",
     "eslint-config-next": "^16.0.10",
     "eslint-config-prettier": "^10.1.3",
